# AIResumeMatcher

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: ats_scorer.py  generate_ai_competitor.py  matcher.py  observability.py  resume_parser.py  skill_comparison.py
backend/core/: model.py
backend/data/: input.py
backend/resume_match/: ats_scorer.py  generate_ai_competitor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: EnhancedResume.jsx  ResultsSection.jsx  UploadSection.jsx
frontend/src/services/: api.js
