[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "arize-phoenix>=12.27.0",
    "dotenv>=0.9.9",
    "jigsawstack>=0.3.8",
    "llama-index-callbacks-arize-phoenix>=0.6.1",
    "llama-index-core>=0.14.10",
    "openai>=2.7.1",
    "opentelemetry-api>=1.39.1",
    "pypdf2>=3.0.1",
    "tqdm>=4.66.0",
    "whisper>=1.1.10",
]
